<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:background="@drawable/back01"
    android:id="@+id/main"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".DashboardUserActivity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:background="@drawable/shape_toolbar02"
        android:id="@+id/toolbarRl"
        android:layout_height="?actionBarSize"
        android:layout_width="match_parent">

        <ImageButton
            android:id="@+id/logoutBtn"
            android:contentDescription="@string/logout"
            android:background="@android:color/transparent"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_logout_white"/>

        <TextView
            android:id="@+id/titleTv"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/dashboard_user"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/userTv"
            android:layout_below="@id/titleTv"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/example_email"
            android:textColor="@color/white" />


    </RelativeLayout>

</RelativeLayout>