<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@drawable/back01"
    tools:context=".MainActivity">

    <!-- Logo của app -->
    <ImageView
        android:id="@+id/iconIv"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo"
        tools:ignore="ImageContrastCheck" />

    <!-- Tiêu đề -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@id/iconIv"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <!-- Button đăng nhập -->
    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/skipBtn"
        android:layout_marginBottom="10dp"
        android:text="@string/button_login"
        android:textColor="@color/white"
        android:background="@drawable/shape_button01"
        tools:ignore="VisualLintButtonSize" />

    <!-- Button đăng nhập không cần tài khoản -->
    <Button
        android:id="@+id/skipBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/button_skip"
        android:textColor="@color/purple_500"
        android:background="@drawable/shape_button02"
        tools:ignore="VisualLintButtonSize" />


</RelativeLayout>