<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back01"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/shape_toolbar01">

        <ImageButton
            android:id="@+id/backIb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:src="@drawable/ic_back_white"
            android:contentDescription="@string/back"
            android:background="@android:color/transparent"/>

        <ImageView
            android:id="@+id/iconIv"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/app_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iconIv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/create_account"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-condensed"
            android:textSize="20sp"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="225dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Tên người dùng -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/nameEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext01"
                    android:drawableStart="@drawable/ic_person_gray"
                    android:drawableLeft="@drawable/ic_person_gray"
                    android:drawablePadding="10dp"
                    android:padding="10dp"
                    android:inputType="textPersonName|textCapWords"
                    android:hint="@string/user_name"
                    android:autofillHints="username"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray01" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Tài khoản Email -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/nameTil"
                android:layout_marginTop="5dp"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/emailEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext01"
                    android:drawableStart="@drawable/ic_email_gray"
                    android:drawableLeft="@drawable/ic_email_gray"
                    android:drawablePadding="10dp"
                    android:padding="10dp"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email_account"
                    android:autofillHints="emailAddress"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray01" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Mật khẩu Email -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailTil"
                android:layout_marginTop="5dp"
                app:passwordToggleEnabled="true"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/passwordEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext01"
                    android:drawableStart="@drawable/ic_lock_gray"
                    android:drawableLeft="@drawable/ic_lock_gray"
                    android:drawablePadding="10dp"
                    android:padding="10dp"
                    android:inputType="textPassword"
                    android:hint="@string/password_account"
                    android:autofillHints="password"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray01" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Xác nhận mật khẩu Email -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cPasswordTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/passwordTil"
                android:layout_marginTop="5dp"
                app:passwordToggleEnabled="true"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/cPasswordEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext01"
                    android:drawableStart="@drawable/ic_lock_gray"
                    android:drawableLeft="@drawable/ic_lock_gray"
                    android:drawablePadding="10dp"
                    android:padding="10dp"
                    android:inputType="textPassword"
                    android:hint="@string/confirm_password_account"
                    android:autofillHints="password"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray01" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Button đăng ký -->
            <Button
                android:id="@+id/registerBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cPasswordTil"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_button01"
                android:text="@string/button_register"
                android:textColor="@color/white"/>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>