<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back01"
    tools:context=".PdfAddActivity">

    <!-- Toolbar -->
    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/shape_toolbar01">

        <!-- Back Button -->
        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:src="@drawable/ic_back_white"
            android:contentDescription="@string/todo"/>

        <!-- Icon image -->
        <ImageView
            android:id="@+id/iconIv"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/backBtn"
            android:src="@drawable/logo"
            android:contentDescription="@string/todo"/>

        <!-- Title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iconIv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/add_new_book"
            android:textColor="@color/white"
            android:textSize="28sp"/>

        <!-- Attach pdf button -->
        <ImageButton
            android:id="@+id/attachBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:src="@drawable/ic_attach_white"
            android:contentDescription="@string/todo"/>

    </RelativeLayout>

    <!-- Input title -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="225dp"
        app:hintEnabled="false">

        <EditText
            android:id="@+id/tilteEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_edittext01"
            android:drawableStart="@drawable/ic_pdf_gray"
            android:drawablePadding="10dp"
            android:hint="@string/title_book"
            android:inputType="textPersonName|textCapWords"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray01"
            android:textSize="16sp"
            android:autofillHints="name"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Input Description -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="5dp"
        android:layout_below="@id/titleTil"
        app:hintEnabled="false">

        <EditText
            android:id="@+id/descriptionEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_edittext01"
            android:drawableStart="@drawable/ic_pdf_gray"
            android:drawablePadding="10dp"
            android:hint="@string/description_book"
            android:inputType="textMultiLine|textCapSentences"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray01"
            android:textSize="16sp"
            android:autofillHints="name"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Pick Category from dialog -->
    <TextView
        android:id="@+id/categoryTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/descriptionTil"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/shape_edittext01"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:hint="@string/book_category"
        android:padding="10dp"
        android:textColorHint="@color/gray01"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_category_gray"
        app:drawableEndCompat="@drawable/ic_down_gray" />

    <!-- Button: upload pdf -->
    <Button
        android:id="@+id/submitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/categoryTv"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:text="@string/add_new_book"
        android:textColor="@color/white"/>

</RelativeLayout>